--- a/digest_2026-01-07.md
+++ b/digest_2026-01-07.md
@@ -9,7 +9,7 @@
 **作者**: Hexiao Lu, Xiaokun Sun, Zeyu Cai, Hao Guo, Ying Tai, Jian Yang, Zhenyu Zhang
 **更新时间**: 2026-01-06 18:59
 **论文摘要**: We present Muses, the first training-free method for fantastic 3D creature generation in a feed-forward paradigm. Previous methods, which rely on part-aware optimization, manual assembly, or 2D image generation, often produce unrealistic or incoherent 3D assets due to the challenges of intricate part-level manipulation and limited out-of-domain generation. In contrast, Muses leverages the 3D skeleton, a fundamental representation of biological forms, to explicitly and rationally compose diverse 
-**核心总结**: 问题：传统方法在生成3D生物时存在不真实或不连贯的问题；方法：Muses利用3D骨骼结构进行无训练的生成；结果：能够合理组合多样化的3D生物形态。
+**核心总结**: 问题：传统方法生成3D生物角色存在不真实或不连贯的问题；方法：Muses利用3D骨骼结构进行无训练的生成；结果：可合理组合多样生物形态。
 
 ---
 ## 2. [Heavy Black-Holes Also Matter in Standard Siren Cosmology](http://arxiv.org/abs/2601.03257v1)
@@ -17,7 +17,7 @@
 **作者**: Grégoire Pierra, Alexander Papadopoulos
 **更新时间**: 2026-01-06 18:59
 **论文摘要**: With the release of the Gravitational-Wave Transient Catalog GWTC-4.0 by the LIGO-Virgo-KAGRA (LVK) collaboration, 218 candidate detections of gravitational waves (GWs) from compact binary coalescences (CBCs) have been reported. This milestone represents a major advancement for GW cosmology, as many methods, particularly those employing the spectral siren approach, critically depend on the number of available sources. We investigate the impact of a novel parametric model describing the full popu
-**核心总结**: 问题：GWTC-4.0中218个引力波候选源对宇宙学研究的影响；方法：使用新的参数化模型分析全群体特性；结果：无。
+**核心总结**: 问题：GWTC-4.0中218个引力波候选源对宇宙学方法的影响；方法：使用新型参数模型研究全样本的红移分布；结果：无。
 
 ---
 ## 3. [A Versatile Multimodal Agent for Multimedia Content Generation](http://arxiv.org/abs/2601.03250v1)
@@ -25,7 +25,7 @@
 **作者**: Daoan Zhang, Wenlin Yao, Xiaoyang Wang, Yebowen Hu, Jiebo Luo, Dong Yu
 **更新时间**: 2026-01-06 18:49
 **论文摘要**: With the advancement of AIGC (AI-generated content) technologies, an increasing number of generative models are revolutionizing fields such as video editing, music generation, and even film production. However, due to the limitations of current AIGC models, most models can only serve as individual components within specific application scenarios and are not capable of completing tasks end-to-end in real-world applications. In real-world applications, editing experts often work with a wide variet
-**核心总结**: 问题：AIGC模型在实际应用中难以实现端到端任务处理；方法：分析当前模型局限性及实际应用场景需求；结果：需开发更集成、适应复杂任务的AIGC系统。
+**核心总结**: 问题：AIGC模型在实际应用中难以实现端到端任务处理；方法：分析现有模型在复杂场景下的局限性；结果：多数模型仅能作为局部组件，无法适应多样化真实场景需求。
 
 ---
 ## 4. [MAGMA: A Multi-Graph based Agentic Memory Architecture for AI Agents](http://arxiv.org/abs/2601.03236v1)
@@ -41,7 +41,7 @@
 **作者**: Luca Candelori, Swarnadeep Majumder, Antonio Mezzacapo, Javier Robledo Moreno, Kharen Musaelian, Santhanam Nagarajan, Sunil Pinnamaneni, Kunal Sharma, Dario Villani
 **更新时间**: 2026-01-06 18:26
 **论文摘要**: Quantum computing has long promised transformative advances in data analysis, yet practical quantum machine learning has remained elusive due to fundamental obstacles such as a steep quantum cost for the loading of classical data and poor trainability of many quantum machine learning algorithms designed for near-term quantum hardware. In this work, we show that one can overcome these obstacles by using a linear Hamiltonian-based machine learning method which provides a compact quantum representa
-**核心总结**: 问题：量子机器学习面临数据加载成本高和可训练性差的问题；方法：采用基于线性哈密顿量的机器学习方法；结果：有效克服了上述障碍，实现更高效的量子数据分析。
+**核心总结**: 问题：量子机器学习面临数据加载成本高和训练困难；方法：采用基于线性哈密顿量的机器学习方法；结果：实现高效的量子表示并克服了上述障碍。
 
 ---
 ## 6. [Open-Source Coil Matching Toolbox for Magnetic Stimulation and Other Electromagnetics (COMATOSE)](http://arxiv.org/abs/2601.03224v1)
@@ -49,7 +49,7 @@
 **作者**: Max Koehler, Stefan Goetz
 **更新时间**: 2026-01-06 18:12
 **论文摘要**: The coil in transcranial magnetic stimulation (TMS) determines the spatial shape of the electromagnetic field in the head, which structures are concurrently activated, and how focal stimulation is. Most of the readily available coils have been designed intuitively instead of systematic mathematical-physical optimization as there were no methods available at the time. Previous research however demonstrated that these coils are far from optimum, e.g., for pulse energy or efficiency, and leave subs
-**核心总结**: 问题：传统TMS线圈设计缺乏系统优化，导致性能不理想；方法：提出基于数学物理优化的线圈设计方法；结果：改进线圈设计可提升脉冲能量和效率。
+**核心总结**: 摘要生成失败: HTTPSConnectionPool(host='dashscope.aliyuncs.com',
 
 ---
 ## 7. [Are eHMIs always helpful? Investigating how eHMIs interfere with pedestrian behavior on multi-lane streets: An eye-tracking virtual reality experiment](http://arxiv.org/abs/2601.03223v1)
@@ -57,7 +57,7 @@
 **作者**: Yun Ye, Zexuan Li, Panagiotis Angeloudis, S. C. Wong, Jian Sun, Haoyang Liang
 **更新时间**: 2026-01-06 18:08
 **论文摘要**: Appropriate communication is crucial for efficient and safe interactions between pedestrians and autonomous vehicles (AVs). External human-machine interfaces (eHMIs) on AVs, which can be categorized as allocentric or egocentric, are considered a promising solution. While the effectiveness of eHMIs has been extensively studied, in complex environments, such as unsignalized multi-lane streets, their potential to interfere with pedestrian crossing behavior remains underexplored. Hence, a virtual re
-**核心总结**: 问题：复杂环境中eHMIs对行人过街行为的影响未被充分研究；方法：通过虚拟现实实验评估eHMIs对行人决策的影响；结果：eHMIs在多车道无信号路段可能干扰行人过街行为。
+**核心总结**: 问题：复杂环境下eHMI对行人过街行为的影响未被充分研究；方法：通过虚拟现实实验评估eHMI在无信号多车道街道中的作用；结果：eHMI可能干扰行人决策，需优化设计以提升交互效率。
 
 ---
 ## 8. [oneTwin: Online Digital Network Twin via Neural Radio Radiance Field](http://arxiv.org/abs/2601.03216v1)
@@ -65,7 +65,7 @@
 **作者**: Yuru Zhang, Ming Zhao, Qiang Liu, Nakjung Choi
 **更新时间**: 2026-01-06 17:58
 **论文摘要**: Digital network twin is a promising technology that replicates real-world networks in real-time and assists with the design, operation, and management of next-generation networks. However, existing approaches (e.g., simulator-based and neural-based) cannot effectively realize the digital network twin, in terms of fidelity, synchronicity, and tractability. In this paper, we propose oneTwin, the first online digital twin system, for the prediction of physical layer metrics. We architect the oneTwi
-**核心总结**: 问题：现有数字网络孪生方法在保真度、同步性和可扩展性上存在不足；方法：提出oneTwin系统，用于物理层指标的在线预测；结果：实现高效、实时的网络孪生，提升网络设计与管理能力。
+**核心总结**: 问题：现有方法无法有效实现高保真、同步和可处理的数字网络孪生；方法：提出oneTwin，首个在线数字孪生系统用于物理层指标预测；结果：无。
 
 ---
 ## 9. [Empowering Reliable Visual-Centric Instruction Following in MLLMs](http://arxiv.org/abs/2601.03198v1)
@@ -73,7 +73,7 @@
 **作者**: Weilei He, Feng Ju, Zhiyuan Fan, Rui Min, Minhao Cheng, Yi R. Fung
 **更新时间**: 2026-01-06 17:23
 **论文摘要**: Evaluating the instruction-following (IF) capabilities of Multimodal Large Language Models (MLLMs) is essential for rigorously assessing how faithfully model outputs adhere to user-specified intentions. Nevertheless, existing benchmarks for evaluating MLLMs' instruction-following capability primarily focus on verbal instructions in the textual modality. These limitations hinder a thorough analysis of instruction-following capabilities, as they overlook the implicit constraints embedded in the se
-**核心总结**: 问题：现有基准主要评估文本指令遵循能力，忽略多模态隐含约束；方法：提出新评估框架以全面分析多模态大模型的指令遵循能力；结果：无。
+**核心总结**: 问题：现有基准未能全面评估多模态大语言模型的指令遵循能力；方法：提出新的评估框架以涵盖多模态指令；结果：揭示了现有评测的不足，强调需更全面的评估方法。
 
 ---
 ## 10. [AnatomiX, an Anatomy-Aware Grounded Multimodal Large Language Model for Chest X-Ray Interpretation](http://arxiv.org/abs/2601.03191v1)
@@ -81,7 +81,7 @@
 **作者**: Anees Ur Rehman Hashmi, Numan Saeed, Christoph Lippert
 **更新时间**: 2026-01-06 17:13
 **论文摘要**: Multimodal medical large language models have shown impressive progress in chest X-ray interpretation but continue to face challenges in spatial reasoning and anatomical understanding. Although existing grounding techniques improve overall performance, they often fail to establish a true anatomical correspondence, resulting in incorrect anatomical understanding in the medical domain. To address this gap, we introduce AnatomiX, a multitask multimodal large language model explicitly designed for a
-**核心总结**: 问题：胸片解读中存在空间推理和解剖理解不足的问题；方法：提出AnatomiX，一种专注于解剖对应关系的多任务多模态大语言模型；结果：无。
+**核心总结**: 摘要生成失败: HTTPSConnectionPool(host='dashscope.aliyuncs.com',
 
 ---
 # RNA_structure_prediction
@@ -92,7 +92,7 @@
 **作者**: Leen Lambers, Oszkár Semeráth
 **更新时间**: 2026-01-06 18:47
 **论文摘要**: This volume contains the post-proceedings of the Sixteenth International Workshop on Graph Computation Models (GCM 2025). The workshops took place in Koblenz, Germany on June 10 as part of STAF (Software Technologies: Applications and Foundations).     Graphs are common mathematical structures that are visual and intuitive. They constitute a natural and seamless way for system modeling in science, engineering, and beyond, including computer science, biology, and business process modeling. Graph 
-**核心总结**: 摘要生成失败: HTTPSConnectionPool(host='dashscope.aliyuncs.com',
+**核心总结**: 问题：无；方法：无；结果：该文集收录了GCM 2025研讨会的论文，会议在德国科布伦茨举行，属于STAF系列活动。
 
 ---
 ## 2. [STReasoner: Empowering LLMs for Spatio-Temporal Reasoning in Time Series via Spatial-Aware Reinforcement Learning](http://arxiv.org/abs/2601.03248v1)
@@ -108,7 +108,7 @@
 **作者**: Javier Salazar Cavazos
 **更新时间**: 2026-01-06 18:30
 **论文摘要**: Foundation vision, audio, and language models enable zero-shot performance on downstream tasks via their latent representations. Recently, unsupervised learning of data group structure with deep learning methods has gained popularity. TURTLE, a state of the art deep clustering algorithm, uncovers data labeling without supervision by alternating label and hyperplane updates, maximizing the hyperplane margin, in a similar fashion to support vector machines (SVMs). However, TURTLE assumes clusters 
-**核心总结**: 问题：TURTLE在无监督聚类中假设簇结构，但未考虑多模态数据的复杂性；方法：基于深度学习的无监督聚类，通过交替更新标签和超平面最大化边缘；结果：无。
+**核心总结**: 摘要生成失败: HTTPSConnectionPool(host='dashscope.aliyuncs.com',
 
 ---
 ## 4. [Inter-Year Transfer of Altitude-Dependent Spectrum Activity Models Using Minimal Calibration](http://arxiv.org/abs/2601.03234v1)
@@ -116,7 +116,7 @@
 **作者**: Amir Hossein Fahim Raouf, İsmail Güvenc
 **更新时间**: 2026-01-06 18:26
 **论文摘要**: This paper studies the transferability of altitude-dependent spectrum activity models and measurements across years. We introduce a physics-informed, mean-only stochastic-geometry model of aggregate interference to altitude-binned received power, yielding three interpretable parameters for a given band and campaign: 1) line-of-sight transition slope, 2) transition altitude, and 3) effective activity constant. Analysis of aerial spectrum measurements collected from 2023 to 2025 across multiple su
-**核心总结**: 问题：研究不同年份间高度依赖的频谱活动模型与测量的可迁移性；方法：引入物理信息驱动的仅均值随机几何干扰模型，提取三个可解释参数；结果：无。
+**核心总结**: 摘要生成失败: HTTPSConnectionPool(host='dashscope.aliyuncs.com',
 
 ---
 ## 5. [Multi-RADS Synthetic Radiology Report Dataset and Head-to-Head Benchmarking of 41 Open-Weight and Proprietary Language Models](http://arxiv.org/abs/2601.03232v1)
@@ -124,7 +124,7 @@
 **作者**: Kartik Bose, Abhinandan Kumar, Raghuraman Soundararajan, Priya Mudgil, Samonee Ralmilay, Niharika Dutta, Manphool Singhal, Arun Kumar, Saugata Sen, Anurima Patra, Priya Ghosh, Abanti Das, Amit Gupta, 
 **更新时间**: 2026-01-06 18:18
 **论文摘要**: Background: Reporting and Data Systems (RADS) standardize radiology risk communication but automated RADS assignment from narrative reports is challenging because of guideline complexity, output-format constraints, and limited benchmarking across RADS frameworks and model sizes. Purpose: To create RXL-RADSet, a radiologist-verified synthetic multi-RADS benchmark, and compare validity and accuracy of open-weight small language models (SLMs) with a proprietary model for RADS assignment. Materials 
-**核心总结**: 问题：自动化RADS分配面临指南复杂性、格式限制和基准不足的挑战；方法：构建RXLRADSet合成多RADS基准，比较开源小语言模型与专有模型的准确性；结果：无。
+**核心总结**: 问题：自动化放射学风险报告系统（RADS）分配存在挑战；方法：构建RXR-RADSet合成多RADS基准，比较小语言模型与专有模型的准确性；结果：无。
 
 ---
 ## 6. [Discrete gravitational diagram technique in the soft synchronous gauge](http://arxiv.org/abs/2601.03228v1)
@@ -132,7 +132,7 @@
 **作者**: V. M. Khatsymovsky
 **更新时间**: 2026-01-06 18:15
 **论文摘要**: This paper develops our work on the consequences of the Regge calculus, where some edge length scale arises as an optimal starting point of the perturbative expansion with taking into account a bell-shaped form of the measure obtained using functional integration over connection.   A "hypercubic" structure is considered (some variables are frozen), it is described by the metric $g_{λμ}$ at the sites.   The edge length scale as some maximum point of the measure is $\sim η^{1 / 2}$, where $η$ defi
-**核心总结**: 问题：研究Regge计算中边长尺度对微扰展开的影响；方法：考虑“超立方”结构，通过连接的泛函积分获得钟形测度；结果：边长尺度为测度最大点，约为η¹⁄²。
+**核心总结**: 问题：研究Regge微分的后果及最优展开起点；方法：采用“超立方”结构，固定部分变量，通过连接的泛函积分获得测量函数；结果：边长尺度为测量函数的最大点，约为η¹⁄²。
 
 ---
 ## 7. [Wait or cross? Understanding the influence of behavioral tendency, trust, and risk perception on pedestrian gap-acceptance of automated truck platoons](http://arxiv.org/abs/2601.03225v1)
@@ -140,6 +140,6 @@
 **作者**: Yun Ye, Yuan Che, Haoyang Liang, Yingheng Zhang, Pengpeng Xu
 **更新时间**: 2026-01-06 18:12
 **论文摘要**: Although automated trucks have the potential to improve freight efficiency, reduce costs, and address driver shortages, organizing two or more trucks in a convoy has raised considerable concerns for pedestrian safety. This study conducted a controlled experiment to examine the influence of behavioral tendency, trust, and risk perception on pedestrian intention to cross in front of an automated truck platoon. A total of 603 subjects participated in the virtual reality video-based questionnaire su
-**核心总结**: 问题：自动化卡车编队对行人过街意愿的影响；方法：虚拟现实实验研究行为倾向、信任和风险感知的作用；结果：未完整给出。
+**核心总结**: 问题：研究自动化卡车编队对行人过马路意愿的影响；方法：通过虚拟现实实验考察行为倾向、信任和风险感知的作用；结果：无。
 
 ---
