deploy: 40a7cd055a9077fd83cdddcfca2aab431c402b0e

--- a/digest_2026-01-18.md
+++ b/digest_2026-01-18.md
@@ -1,4 +1,4 @@
-# arXiv 论文日报 2026-01-17
+# arXiv 论文日报 2026-01-18
 > 自动抓取并筛选 | 共 19 篇论文
 ---
 # RNA_structure_prediction
@@ -9,7 +9,7 @@
 **作者**: Xuweiyi Chen, Wentao Zhou, Zezhou Cheng
 **更新时间**: 2026-01-15 18:59
 **论文摘要**: We present WildRayZer, a self-supervised framework for novel view synthesis (NVS) in dynamic environments where both the camera and objects move. Dynamic content breaks the multi-view consistency that static NVS models rely on, leading to ghosting, hallucinated geometry, and unstable pose estimation. WildRayZer addresses this by performing an analysis-by-synthesis test: a camera-only static renderer explains rigid structure, and its residuals reveal transient regions. From these residuals, we co
-**核心总结**: 问题：动态环境中新视角合成面临多视角不一致导致的鬼影、几何幻觉和姿态不稳定；方法：WildRayZer通过分析-合成测试，利用仅相机的静态渲染器解释刚性结构并检测瞬态区域；结果：无。
+**核心总结**: 问题：动态环境中存在相机和物体运动，导致传统NVS模型出现伪影和不稳定；方法：提出WildRayZer框架，通过分析-合成测试分离静态结构与瞬态区域；结果：利用残差揭示动态部分，提升新视角合成质量。
 
 ---
 ## 2. [DInf-Grid: A Neural Differential Equation Solver with Differentiable Feature Grids](http://arxiv.org/abs/2601.10715v1)
@@ -17,7 +17,7 @@
 **作者**: Navami Kairanda, Shanthika Naik, Marc Habermann, Avinash Sharma, Christian Theobalt, Vladislav Golyanik
 **更新时间**: 2026-01-15 18:59
 **论文摘要**: We present a novel differentiable grid-based representation for efficiently solving differential equations (DEs). Widely used architectures for neural solvers, such as sinusoidal neural networks, are coordinate-based MLPs that are both computationally intensive and slow to train. Although grid-based alternatives for implicit representations (e.g., Instant-NGP and K-Planes) train faster by exploiting signal structure, their reliance on linear interpolation restricts their ability to compute highe
-**核心总结**: 问题：传统神经求解器计算效率低，网格表示依赖线性插值限制精度；方法：提出一种新的可微网格表示方法；结果：提升求解微分方程的效率和精度。
+**核心总结**: 问题：传统神经求解器计算效率低，网格基表示依赖线性插值限制精度；方法：提出一种新的可微网格表示方法以高效求解微分方程；结果：提升训练速度并改善高阶导数计算能力。
 
 ---
 ## 3. [Grounding Agent Memory in Contextual Intent](http://arxiv.org/abs/2601.10702v1)
@@ -25,7 +25,7 @@
 **作者**: Ruozhen Yang, Yucheng Jiang, Yueqi Jiang, Priyanka Kargupta, Yunyi Zhang, Jiawei Han
 **更新时间**: 2026-01-15 18:55
 **论文摘要**: Deploying large language models in long-horizon, goal-oriented interactions remains challenging because similar entities and facts recur under different latent goals and constraints, causing memory systems to retrieve context-mismatched evidence. We propose STITCH (Structured Intent Tracking in Contextual History), an agentic memory system that indexes each trajectory step with a structured retrieval cue, contextual intent, and retrieves history by matching the current step's intent. Contextual 
-**核心总结**: 问题：长周期目标导向交互中，记忆系统因实体和事实重复导致上下文不匹配；方法：提出STITCH，通过结构化检索线索和上下文意图进行历史检索；结果：无。
+**核心总结**: 问题：长周期目标导向交互中，记忆系统因实体和事实重复而检索错误；方法：提出STITCH，通过结构化检索线索和上下文意图进行历史检索；结果：无。
 
 ---
 ## 4. [LIBERTy: A Causal Framework for Benchmarking Concept-Based Explanations of LLMs with Structural Counterfactuals](http://arxiv.org/abs/2601.10700v1)
@@ -33,7 +33,7 @@
 **作者**: Gilat Toker, Nitay Calderon, Ohad Amosy, Roi Reichart
 **更新时间**: 2026-01-15 18:54
 **论文摘要**: Concept-based explanations quantify how high-level concepts (e.g., gender or experience) influence model behavior, which is crucial for decision-makers in high-stakes domains. Recent work evaluates the faithfulness of such explanations by comparing them to reference causal effects estimated from counterfactuals. In practice, existing benchmarks rely on costly human-written counterfactuals that serve as an imperfect proxy. To address this, we introduce a framework for constructing datasets contai
-**核心总结**: 问题：如何提高概念解释的可信度；方法：引入框架构建数据集以生成更可靠的反事实；结果：无。
+**核心总结**: 问题：如何提高概念解释的可靠性；方法：引入构建数据集的框架以生成更准确的反事实；结果：提升对模型行为影响的量化分析。
 
 ---
 ## 5. [Madelung hydrodynamics of spin-orbit coupling: action principles, currents, and correlations](http://arxiv.org/abs/2601.10698v1)
@@ -41,7 +41,7 @@
 **作者**: Cesare Tronci
 **更新时间**: 2026-01-15 18:54
 **论文摘要**: We exploit the variational and Hamiltonian structures of quantum hydrodynamics with spin to unfold the correlation and torque mechanisms accompanying spin-orbit coupling (SOC) in electronic motion. Using Hamilton's action principle for the Pauli equation, we isolate SOC-induced quantum forces that act on the orbital Madelung--Bohm trajectories and complement the usual force terms known to appear in quantum hydrodynamics with spin. While the latter spin-hydrodynamic forces relate to the quantum g
-**核心总结**: 问题：电子运动中自旋-轨道耦合的关联与扭矩机制；方法：利用量子流体力学的变分和哈密顿结构分析自旋轨道耦合；结果：识别出SOC引起的量子力并补充了自旋流体力学中的力项。
+**核心总结**: 问题：电子运动中自旋-轨道耦合的关联与扭矩机制；方法：利用量子流体力学的变分和哈密顿结构分析自旋-轨道耦合影响；结果：识别出SOC引起的量子力并补充自旋流体力学中的力项。
 
 ---
 ## 6. [Quantum geometry of the rotating shallow water model](http://arxiv.org/abs/2601.10695v1)
@@ -49,7 +49,7 @@
 **作者**: Sriram Ganeshan, Alan T. Dorsey
 **更新时间**: 2026-01-15 18:52
 **论文摘要**: The rotating shallow water equations (RSWE) are a mainstay of atmospheric and oceanic modeling, and their wave dynamics has close analogues in settings ranging from two-dimensional electron gases to active-matter fluids. While recent work has emphasized the topological character of RSWE wave bands, here we develop a complementary quantum-geometric description by computing the full quantum geometric tensor (QGT) for the linearized RSWE on an $f$-plane. The QGT unifies two pieces of band geometry:
-**核心总结**: 问题：旋转浅水方程的波动力学几何描述不足；方法：计算线性化旋转浅水方程在f-平面上的量子几何张量；结果：揭示波带几何统一特性。
+**核心总结**: 问题：旋转浅水方程的波带几何特性；方法：计算线性化旋转浅水方程在f-平面上的量子几何张量；结果：统一了波带几何的两部分。
 
 ---
 ## 7. [An Extension-Based Accessibility Framework for Making Blockly Accessible to Blind and Low-Vision Users](http://arxiv.org/abs/2601.10688v1)
@@ -57,7 +57,7 @@
 **作者**: Rubel Hassan Mollik, Vamsi Krishna Kosuri, Hans Djalali, Stephanie Ludi, Aboubakar Mountapmbeme
 **更新时间**: 2026-01-15 18:48
 **论文摘要**: Block-based programming environments (BBPEs) such as Scratch and Code.org are now widely used in K-12 computer science classes, but they remain mostly inaccessible to blind or visually impaired (BVI) learners. A major problem is that prior accessibility solutions have relied on modifications to the Blockly library, making them difficult to apply in existing BBPEs and thereby limiting adoption. We present an Extension-based Accessibility Framework (EAF) to make BBPEs accessible for BVI students. 
-**核心总结**: 问题：BBPEs对视障学生不友好；方法：提出基于扩展的可访问性框架（EAF）；结果：无需修改Blockly库即可提升可访问性。
+**核心总结**: 问题：BBPEs对BVI学生不具可访问性；方法：提出基于扩展的EAF框架；结果：提升BBPEs对BVI学生的可访问性。
 
 ---
 ## 8. [Vertex operator algebra bundles on modular curves and their associated modular forms](http://arxiv.org/abs/2601.10686v1)
@@ -65,7 +65,7 @@
 **作者**: Daniel Barake, Owen Chuchman, Cameron Franc, Geoffrey Mason, Brett Nasserden
 **更新时间**: 2026-01-15 18:46
 **论文摘要**: This paper describes the vector bundle on the elliptic modular curve that is associated to a vertex operator algebra $V$ (VOA) or more generally a quasi-vertex operator algebra (QVOA), with a view towards future applications aimed at studying the characters of VOAs. We explain how the modes of sections of $V$ give rise naturally to $V$-valued quasi-modular forms. The space $Q(V)$ of $V$-valued quasi-modular forms is endowed with the structure of a doubled QVOA, and in particular the algebra $Q$ 
-**核心总结**: 问题：研究与顶点算子代数相关的向量丛及其在模曲线上的应用；方法：通过VOA的截面模式构造V-值拟模形式，赋予其双重QVOA结构；结果：揭示了V-值拟模形式空间的代数结构。
+**核心总结**: 问题：研究与顶点算子代数相关的向量丛及其模形式；方法：分析V-值拟模形式结构及双QVOA性质；结果：构建了Q(V)的双重QVOA结构。
 
 ---
 ## 9. [On the origin of neural scaling laws: from random graphs to natural language](http://arxiv.org/abs/2601.10684v1)
@@ -73,7 +73,7 @@
 **作者**: Maissam Barkeshli, Alberto Alfarano, Andrey Gromov
 **更新时间**: 2026-01-15 18:46
 **论文摘要**: Scaling laws have played a major role in the modern AI revolution, providing practitioners predictive power over how the model performance will improve with increasing data, compute, and number of model parameters. This has spurred an intense interest in the origin of neural scaling laws, with a common suggestion being that they arise from power law structure already present in the data. In this paper we study scaling laws for transformers trained to predict random walks (bigrams) on graphs with
-**核心总结**: 问题：研究Transformer在图上随机游走预测任务中的缩放规律；方法：分析模型性能随数据、计算和参数变化的规律；结果：未明确给出具体结果。
+**核心总结**: 问题：研究Transformer在图上随机游走（bigrams）预测任务中的缩放规律；方法：分析模型性能随数据、计算量和参数数量的变化；结果：无。
 
 ---
 # RNA_design
@@ -84,7 +84,7 @@
 **作者**: Quinten De Man, Atharva Sharma, Kishen N Gowda, Laxman Dhulipala
 **更新时间**: 2026-01-15 18:57
 **论文摘要**: The dynamic trees problem is to maintain a tree under edge updates while supporting queries like connectivity queries or path queries. Despite the first data structure for this fundamental problem -- the link-cut tree -- being invented 40 years ago, our experiments reveal that they are still the fastest sequential data structure for the problem. However, link-cut trees cannot support parallel batch-dynamic updates and have limitations on the kinds of queries they support.   In this paper, we des
-**核心总结**: 问题：动态树维护与查询；方法：提出新数据结构支持并行批量更新和扩展查询类型；结果：性能优于传统link-cut树。
+**核心总结**: 问题：动态树维护与查询；方法：提出新数据结构以支持并行批量更新和更广泛查询；结果：实验显示现有结构仍为最快，但新方法解决其局限性。
 
 ---
 ## 2. [Perfect Secret Key Generation for a class of Hypergraphical Sources](http://arxiv.org/abs/2601.10697v1)
@@ -92,7 +92,7 @@
 **作者**: Manuj Mukherjee, Sagnik Chatterjee, Alhad Sethi
 **更新时间**: 2026-01-15 18:53
 **论文摘要**: Nitinawarat and Narayan proposed a perfect secret key generation scheme for the so-called \emph{pairwise independent network (PIN) model} by exploiting the combinatorial properties of the underlying graph, namely the spanning tree packing rate. This work considers a generalization of the PIN model where the underlying graph is replaced with a hypergraph, and makes progress towards designing similar perfect secret key generation schemes by exploiting the combinatorial properties of the hypergraph
-**核心总结**: 问题：传统PIN模型的密钥生成方案推广至超图模型；方法：利用超图的组合特性，如生成树打包率；结果：提出改进的完美密钥生成方案。
+**核心总结**: 问题：在超图替代传统图的广义PIN模型中生成完美密钥；方法：利用超图的组合性质，如生成树打包率；结果：推进了类似完美密钥生成方案的设计。
 
 ---
 ## 3. [The Impact of Generative AI on Architectural Conceptual Design: Performance, Creative Self-Efficacy and Cognitive Load](http://arxiv.org/abs/2601.10696v1)
@@ -100,7 +100,7 @@
 **作者**: Han Jiang, Yao Xiao, Rachel Hurley, Shichao Liu
 **更新时间**: 2026-01-15 18:52
 **论文摘要**: Our study examines how generative AI (GenAI) influences performance, creative self-efficacy, and cognitive load in architectural conceptual design tasks. Thirty-six student participants from Architectural Engineering and other disciplines completed a two-phase architectural design task, first independently and then with external tools (GenAI-assisted condition and control condition using an online repository of existing architectural projects). Design outcomes were evaluated by expert raters, wh
-**核心总结**: 问题：GenAI对建筑概念设计任务中的表现、创造性自我效能感和认知负荷的影响；方法：36名学生完成两阶段设计任务，对比使用GenAI工具与传统资源的条件；结果：无。
+**核心总结**: 问题：GenAI对建筑概念设计任务中的表现、创造性自我效能感和认知负荷的影响；方法：36名学生参与两阶段设计任务，对比GenAI辅助与传统工具；结果：无。
 
 ---
 ## 4. [Finite-momentum Cooper plasmons in superconducting terahertz microcavities](http://arxiv.org/abs/2601.10692v1)
@@ -108,7 +108,7 @@
 **作者**: Alex M. Potts, Marios H. Michael, Gunda Kipp, Sara M. Langner, Hope M. Bretscher, Jonathan Stensberg, Kelson Kaj, Toru Matsuyama, Matthew W. Day, Felix Sturm, Abhay K. Nayak, Liam A. Cohen, Xiaoyang Z
 **更新时间**: 2026-01-15 18:50
 **论文摘要**: The phase mode of a superconductor's order parameter encodes fundamental information about pairing and dissipation, but is typically inaccessible at low frequencies due to the Anderson-Higgs mechanism. Superconducting samples thinner than the London penetration depth, however, support a gapless phase mode whose dispersion can be reshaped by a proximal screening layer. Here, we theoretically and experimentally show that this screened phase mode in a superconducting thin film integrated into on-ch
-**核心总结**: 问题：超导体序参量的相位模式在低频下通常不可见；方法：利用薄超导样品与邻近屏蔽层结合，调控相位模式；结果：实现可调控的无能隙相位模式。
+**核心总结**: 问题：超导体序参量相位在低频下通常不可测；方法：利用超薄超导样品与邻近屏蔽层相互作用；结果：实现了可调控的无能隙相位模式。
 
 ---
 ## 5. [The Conversational Exam: A Scalable Assessment Design for the AI Era](http://arxiv.org/abs/2601.10691v1)
@@ -116,7 +116,7 @@
 **作者**: Lorena A. Barba, Laura Stegner
 **更新时间**: 2026-01-15 18:50
 **论文摘要**: Traditional assessment methods collapse when students use generative AI to complete work without genuine engagement, creating an illusion of competence where they believe they're learning but aren't. This paper presents the conversational exam -- a scalable oral examination format that restores assessment validity by having students code live while explaining their reasoning. Drawing on human-computer interaction principles, we examined 58 students in small groups across just two days, demonstra
-**核心总结**: 问题：传统评估方法在学生使用生成式AI完成任务时失效；方法：提出对话式考试，通过实时编码并解释思路进行评估；结果：在两天内对58名学生进行测试，验证了该方法的有效性。
+**核心总结**: 问题：传统评估方法在学生使用生成式AI完成任务时失效；方法：提出对话式考试，通过实时编码和解释推理恢复评估有效性；结果：在两天内对58名学生进行小群体测试，验证了方法的可行性。
 
 ---
 ## 6. [Single-Stage Huffman Encoder for ML Compression](http://arxiv.org/abs/2601.10673v1)
@@ -124,7 +124,7 @@
 **作者**: Aditya Agrawal, Albert Magyar, Hiteshwar Eswaraiah, Patrick Sheridan, Pradeep Janedula, Ravi Krishnan Venkatesan, Krishna Nair, Ravi Iyer
 **更新时间**: 2026-01-15 18:37
 **论文摘要**: Training and serving Large Language Models (LLMs) require partitioning data across multiple accelerators, where collective operations are frequently bottlenecked by network bandwidth. Lossless compression using Huffman codes is an effective way to alleviate the issue, however, its three-stage design requiring on-the-fly frequency analysis, codebook generation and transmission of codebook along with data introduces computational, latency and data overheads which are prohibitive for latency-sensit
-**核心总结**: 问题：大语言模型训练和推理中，数据跨加速器划分导致集体操作受网络带宽瓶颈；方法：使用无损压缩的霍夫曼编码减少传输数据量；结果：三阶段设计引入计算、延迟和数据开销，对低延迟场景不友好。
+**核心总结**: 问题：大语言模型训练与推理中，数据跨加速器分区导致网络带宽瓶颈；方法：使用霍夫曼编码进行无损压缩；结果：三阶段设计引入计算、延迟和数据开销，难以满足低延迟需求。
 
 ---
 ## 7. [Safe Trajectory Gradient Flow Control of a Grid-Interfacing Inverter](http://arxiv.org/abs/2601.10671v1)
@@ -132,7 +132,7 @@
 **作者**: Trager Joswig-Jones, Baosen Zhang
 **更新时间**: 2026-01-15 18:36
 **论文摘要**: Grid-interfacing inverters serve as the interface between renewable energy resources and the electric power grid, offering fast, programmable control capabilities. However, their operation is constrained by hardware limitations, such as bounds on the current magnitude. Existing control methods for these systems often neglect these constraints during controller design and instead rely on ad hoc limiters, which can introduce instability or degrade performance. In this work, we present a control fr
-**核心总结**: 问题：电网接口逆变器受硬件限制影响，现有控制方法忽视约束导致性能下降；方法：提出一种考虑硬件约束的控制框架；结果：提升系统稳定性与性能。
+**核心总结**: 问题：电网逆变器控制受硬件限制影响，现有方法忽略约束导致不稳定或性能下降；方法：提出一种考虑硬件约束的控制框架；结果：提升系统稳定性和性能。
 
 ---
 ## 8. [PACEvolve: Enabling Long-Horizon Progress-Aware Consistent Evolution](http://arxiv.org/abs/2601.10657v1)
@@ -140,7 +140,7 @@
 **作者**: Minghao Yan, Bo Peng, Benjamin Coleman, Ziqi Chen, Zhouhang Xie, Zhankui He, Noveen Sachdeva, Isabella Ye, Weili Wang, Chi Wang, Ed H. Chi, Wang-Cheng Kang, Derek Zhiyuan Cheng, Beidou Wang
 **更新时间**: 2026-01-15 18:25
 **论文摘要**: Large Language Models (LLMs) have emerged as powerful operators for evolutionary search, yet the design of efficient search scaffolds remains ad hoc. While promising, current LLM-in-the-loop systems lack a systematic approach to managing the evolutionary process. We identify three distinct failure modes: Context Pollution, where experiment history biases future candidate generation; Mode Collapse, where agents stagnate in local minima due to poor exploration-exploitation balance; and Weak Collab
-**核心总结**: 问题：LLM进化搜索中存在上下文污染、模式崩溃和协作薄弱等失败模式；方法：识别并分析三种失败模式；结果：提出系统化管理进化过程的方法。
+**核心总结**: 问题：LLM在进化搜索中存在上下文污染、模式崩溃和协作薄弱等失败模式；方法：提出系统化框架以管理进化过程；结果：提升搜索效率与多样性。
 
 ---
 ## 9. [RoutIR: Fast Serving of Retrieval Pipelines for Retrieval-Augmented Generation](http://arxiv.org/abs/2601.10644v1)
@@ -156,6 +156,6 @@
 **作者**: Chengfeng Zhao, Jiazhi Shu, Yubo Zhao, Tianyu Huang, Jiahao Lu, Zekai Gu, Chengwei Ren, Zhiyang Dou, Qing Shuai, Yuan Liu
 **更新时间**: 2026-01-15 17:52
 **论文摘要**: In this paper, we find that the generation of 3D human motions and 2D human videos is intrinsically coupled. 3D motions provide the structural prior for plausibility and consistency in videos, while pre-trained video models offer strong generalization capabilities for motions, which necessitate coupling their generation processes. Based on this, we present CoMoVi, a co-generative framework that couples two video diffusion models (VDMs) to generate 3D human motions and videos synchronously within
-**核心总结**: 问题：3D人体动作与2D视频生成存在内在耦合关系；方法：提出CoMoVi框架，同步生成3D动作和视频；结果：无。
+**核心总结**: 问题：3D人体动作与2D视频生成耦合；方法：提出CoMoVi框架，同步生成3D动作和视频；结果：无。
 
 ---
