deploy: 40a7cd055a9077fd83cdddcfca2aab431c402b0e

--- a/digest_2026-01-20.md
+++ b/digest_2026-01-20.md
@@ -1,4 +1,4 @@
-# arXiv 论文日报 2026-01-19
+# arXiv 论文日报 2026-01-20
 > 自动抓取并筛选 | 共 20 篇论文
 ---
 # RNA_structure_prediction
@@ -9,7 +9,7 @@
 **作者**: Mengyuan Zhao, Maël Le Treust, Tobias J. Oechtering
 **更新时间**: 2026-01-16 18:59
 **论文摘要**: We study joint source-channel coding over Markov channels through the empirical coordination framework. More specifically, we aim at determining the empirical distributions of source and channel symbols that can be induced by a coding scheme. We consider strictly causal encoders that generate channel inputs, without access to the past channel states, henceforth driving the current Markov state evolution. Our main result is the single-letter inner and outer bounds of the set of achievable joint d
-**核心总结**: 问题：联合源信道编码在马尔可夫信道中的可达分布；方法：基于经验协调框架，考虑严格因果编码器；结果：得出联合分布的单字母内界和外界。
+**核心总结**: 问题：联合信源信道编码在马尔可夫信道中的性能分析；方法：基于经验协调框架，研究编码方案可诱导的信源与信道符号分布；结果：得出可达集合的单字母内界和外界。
 
 ---
 ## 2. [Predictive autoencoder-transformer model of Cu oxidation state from EELS and XAS spectra](http://arxiv.org/abs/2601.11509v1)
@@ -17,7 +17,7 @@
 **作者**: Brian Lee, Linna Qiao, Samuel Gleason, Guangwen Zhou, Xiaohui Qu, Judith Yang, Jim Ciston, Deyu Lu
 **更新时间**: 2026-01-16 18:45
 **论文摘要**: X-ray absorption spectroscopy (XAS) and electron energy-loss spectroscopy (EELS) produce detailed information about oxidation state, bonding, and coordination, making them essential for quantitative studies of redox and structure in functional materials. However, high-throughput quantitative analysis of these spectra, especially for mixed valence materials, remains challenging as diverse experimental conditions introduce noise, misalignment, broadening of the spectral features. We address this c
-**核心总结**: 问题：高通量定量分析X射线吸收和电子能量损失谱存在挑战；方法：提出新方法处理噪声、偏移和光谱特征展宽；结果：提升混合价态材料的光谱分析准确性。
+**核心总结**: 问题：高通量定量分析X射线吸收和电子能量损失谱存在挑战；方法：提出自动化处理方法以应对噪声和谱峰宽化；结果：提升混合价态材料的分析准确性。
 
 ---
 ## 3. [MetaboNet: The Largest Publicly Available Consolidated Dataset for Type 1 Diabetes Management](http://arxiv.org/abs/2601.11505v1)
@@ -25,7 +25,7 @@
 **作者**: Miriam K. Wolff, Peter Calhoun, Eleonora Maria Aiello, Yao Qin, Sam F. Royston
 **更新时间**: 2026-01-16 18:38
 **论文摘要**: Progress in Type 1 Diabetes (T1D) algorithm development is limited by the fragmentation and lack of standardization across existing T1D management datasets. Current datasets differ substantially in structure and are time-consuming to access and process, which impedes data integration and reduces the comparability and generalizability of algorithmic developments. This work aims to establish a unified and accessible data resource for T1D algorithm development. Multiple publicly available T1D datas
-**核心总结**: 问题：T1D算法开发受限于数据集碎片化和缺乏标准化；方法：构建统一且可访问的T1D数据资源；结果：提升数据整合性与算法可比性。
+**核心总结**: 问题：T1D算法开发受限于数据集碎片化和缺乏标准化；方法：构建统一且可访问的T1D数据资源；结果：提升数据整合性与算法开发的可比性与泛化性。
 
 ---
 ## 4. [Visualization of Tunable Electronic Structure of Monolayer TaIrTe$_4$](http://arxiv.org/abs/2601.11504v1)
@@ -33,7 +33,7 @@
 **作者**: Sandy Adhitia Ekahana, Aalok Tiwari, Souvik Sasmal, Zefeng Cai, Ravi Kumar Bandapelli, I-Hsuan Kao, Jian Tang, Chenbo Min, Tiema Qian, Kenji Watanabe, Takashi Taniguchi, Ni Ni, Qiong Ma, Chris Jozwiak
 **更新时间**: 2026-01-16 18:35
 **论文摘要**: Monolayer TaIrTe$_4$ has emerged as an attractive material platform to study intriguing phenomena related to topology and strong electron correlations. Recently, strong interactions have been demonstrated to induce strain and dielectric screening tunable topological phases such as quantum spin Hall insulator (QSHI), trivial insulator, higher-order topological insulator, and metallic phase, in the ground state of monolayer TaIrTe$_4$. Moreover, charge dosing has been demonstrated to convert the Q
-**核心总结**: 问题：单层TaIrTe₄在强相互作用下表现出可调控的拓扑相；方法：通过应变和介电屏蔽研究其拓扑相变；结果：观察到量子自旋霍尔绝缘体、平凡绝缘体等相。
+**核心总结**: 问题：单层TaIrTe₄在强相互作用下可诱导多种拓扑相；方法：通过应变和介电屏蔽调控；结果：观察到量子自旋霍尔绝缘体、平庸绝缘体等相变。
 
 ---
 ## 5. [Halide diffusion in mixed-halide perovskites and heterojunctions](http://arxiv.org/abs/2601.11503v1)
@@ -41,7 +41,7 @@
 **作者**: Viren Tyagi, Mike Pols, Geert Brocks, Shuxia Tao
 **更新时间**: 2026-01-16 18:34
 **论文摘要**: Migration of halide defects guides ion transport in metal halide perovskites and controls the kinetics of halide mixing and phase separation. We study the diffusion of halide vacancies and interstitials in \ce{CsPb(I_{x}Br_{1-x})_{3}} and \ce{CsPbI_{3}}/\ce{CsPbBr_{3}} heterojunctions by molecular dynamics simulations using neural network potentials trained on density functional theory calculations. We observe enhanced diffusion of both vacancies and interstitials in the mixed halide compounds c
-**核心总结**: 问题：卤化物缺陷迁移影响金属卤化物钙钛矿中的离子传输及卤素混合与相分离动力学；方法：使用神经网络势能的分子动力学模拟研究CsPb(IₓBr₁₋ₓ)₃和CsPbI₃/CsPbBr₃异质结中卤化物空位和间隙的扩散；结果：混合卤化物化合物中空位和间隙的扩散增强。
+**核心总结**: 问题：卤化物缺陷迁移影响金属卤化物钙钛矿中的离子传输及相分离动力学；方法：使用神经网络势的分子动力学模拟研究卤化物空位和间隙的扩散；结果：混合卤化物化合物中空位和间隙扩散增强。
 
 ---
 ## 6. [Raman scattering fingerprints of the charge density wave state in one-dimensional NbTe$_4$](http://arxiv.org/abs/2601.11502v1)
@@ -49,7 +49,7 @@
 **作者**: Natalia Zawadzka, Cem Sevik, Zahir Muhammad, Zia Ur Rehman, Weisheng Zhao, Adam Babiński, Maciej R. Molas
 **更新时间**: 2026-01-16 18:33
 **论文摘要**: Charge-density waves (CDWs) are ordered quantum states of conduction electrons accompanied by periodic lattice distortions. Raman scattering (RS) spectroscopy is therefore well suited for probing CDW-induced structural modulations. We investigate the CDW state in quasi-one-dimensional NbTe$_4$ using RS spectroscopy. At $T$=5~K, the resonantly enhanced Raman spectrum exhibits 25 phonon modes. Polarization-dependent measurements reveal a strong coupling between phonon-mode symmetry and crystallogr
-**核心总结**: 问题：研究NbTe₄中的电荷密度波（CDW）结构调制；方法：使用共振拉曼光谱（RS）探测；结果：在5 K时观察到25个声子模，显示声子对称性与晶体结构的强耦合。
+**核心总结**: 问题：研究NbTe₄中的电荷密度波（CDW）结构调制；方法：利用拉曼光谱（RS）探测；结果：5 K时观察到25个声子模式，显示声子对称性与晶体结构强耦合。
 
 ---
 ## 7. [Influence of secondary neutrons on alpha-particle induced reaction cross section measurement below the Coulomb barrier](http://arxiv.org/abs/2601.11497v1)
@@ -57,7 +57,7 @@
 **作者**: Yamato Fujii, Naohiko Otuka, Kenta Sugihara, Masayuki Aikawa, Hiromitsu Haba, Isao Murata
 **更新时间**: 2026-01-16 18:19
 **论文摘要**: The influence of the secondary neutrons on measurements of alpha-particle activation cross sections below the Coulomb barrier was studied for the $^\mathrm{nat}$Pt($α$,x)$^\mathrm{195m}$Pt reaction. We characterized the secondary neutron field by using the particle transport simulation code PHITS, and estimated the $^\mathrm{nat}$Pt(n,x)$^\mathrm{195m}$Pt yields by using the characterized neutron spectra and the $^\mathrm{nat}$Pt(n,x)$^{195m}$Pt cross sections in the JENDL-5/A library. We confir
-**核心总结**: 问题：次级中子对低于库仑屏障的α粒子活化截面测量的影响；方法：使用PHITS模拟次级中子场，结合JENDL-5/A数据计算产率；结果：无。
+**核心总结**: 问题：研究次级中子对低于库仑屏障的α粒子活化截面测量的影响；方法：使用PHITS模拟次级中子场，结合JENDL-5/A数据计算产率；结果：无。
 
 ---
 ## 8. [BoxMind: Closed-loop AI strategy optimization for elite boxing validated in the 2024 Olympics](http://arxiv.org/abs/2601.11492v1)
@@ -65,7 +65,7 @@
 **作者**: Kaiwen Wang, Kaili Zheng, Rongrong Deng, Qingmin Fan, Milin Zhang, Zongrui Li, Xuesi Zhou, Bo Han, Liren Chen, Chenyi Guo, Ji Wu
 **更新时间**: 2026-01-16 18:14
 **论文摘要**: Competitive sports require sophisticated tactical analysis, yet combat disciplines like boxing remain underdeveloped in AI-driven analytics due to the complexity of action dynamics and the lack of structured tactical representations. To address this, we present BoxMind, a closed-loop AI expert system validated in elite boxing competition. By defining atomic punch events with precise temporal boundaries and spatial and technical attributes, we parse match footage into 18 hierarchical technical-ta
-**核心总结**: 问题：拳击比赛缺乏AI驱动的战术分析；方法：定义原子击打事件并构建18层技术-战术结构；结果：提出BoxMind系统，提升拳击战术分析能力。
+**核心总结**: 问题：拳击战术分析缺乏结构化表示，AI发展不足；方法：定义原子出拳事件，构建18层技术-战术层次结构；结果：提出BoxMind系统，实现拳击比赛的闭环AI分析。
 
 ---
 ## 9. [Space-Optimal, Computation-Optimal, Topology-Agnostic, Throughput-Scalable Causal Delivery through Hybrid Buffering](http://arxiv.org/abs/2601.11487v1)
@@ -73,7 +73,7 @@
 **作者**: Paulo Sérgio Almeida
 **更新时间**: 2026-01-16 18:08
 **论文摘要**: Message delivery respecting causal ordering (causal delivery) is one of the most classic and widely useful abstraction for inter-process communication in a distributed system. Most approaches tag messages with causality information and buffer them at the receiver until they can be safely delivered. Except for specific approaches that exploit communication topology, therefore not generally applicable, they incur a metadata overhead which is prohibitive for a large number of processes. Much less u
-**核心总结**: 问题：分布式系统中因果传递面临元数据开销过大的问题；方法：通过利用通信拓扑优化消息传递，减少元数据开销；结果：提出的方法在保持因果性的同时降低开销，但仅适用于特定场景。
+**核心总结**: 问题：分布式系统中消息因果传递的元数据开销过大；方法：提出一种无需标记因果信息的轻量级因果传递机制；结果：减少元数据开销，适用于大规模进程。
 
 ---
 ## 10. [Temporal Complexity and Self-Organization in an Exponential Dense Associative Memory Model](http://arxiv.org/abs/2601.11478v1)
@@ -81,7 +81,7 @@
 **作者**: Marco Cafiso, Paolo Paradisi
 **更新时间**: 2026-01-16 18:01
 **论文摘要**: Dense Associative Memory (DAM) models generalize the classical Hopfield model by incorporating n-body or exponential interactions that greatly enhance storage capacity. While the criticality of DAM models has been largely investigated, mainly within a statistical equilibrium picture, little attention has been devoted to the temporal self-organizing behavior induced by learning. In this work, we investigate the behavior of a stochastic exponential DAM (SEDAM) model through the lens of Temporal Co
-**核心总结**: 问题：研究随机指数DAM模型的时间自组织行为；方法：通过时间协同视角分析SEDAM模型；结果：揭示了学习诱导的动态演化特性。
+**核心总结**: 问题：研究随机指数DAM模型的时序自组织行为；方法：通过时间关联视角分析SEDAM模型；结果：揭示了学习引发的动态演化特性。
 
 ---
 # RNA_design
@@ -92,7 +92,7 @@
 **作者**: Eilam Shapira, Roi Reichart, Moshe Tennenholtz
 **更新时间**: 2026-01-16 18:18
 **论文摘要**: The integration of AI agents into economic markets fundamentally alters the landscape of strategic interaction. We investigate the economic implications of expanding the set of available technologies in three canonical game-theoretic settings: bargaining (resource division), negotiation (asymmetric information trade), and persuasion (strategic information transmission). We find that simply increasing the choice of AI delegates can drastically shift equilibrium payoffs and regulatory outcomes, of
-**核心总结**: 问题：AI代理融入经济市场对战略互动的影响；方法：在讨价还价、谈判和说服三类博弈中研究技术选择扩展的经济影响；结果：增加AI代理选择会显著改变均衡收益和监管结果。
+**核心总结**: 问题：AI代理融入经济市场对策略互动的影响；方法：在博弈论经典场景中分析技术扩展的经济影响；结果：增加AI代理选择会显著改变均衡收益和监管结果。
 
 ---
 ## 2. [Heat, work, and fluctuations in a driven quantum resonator](http://arxiv.org/abs/2601.11480v1)
@@ -100,7 +100,7 @@
 **作者**: Riya Baruah, Pedro Portugal, Jun-Zhe Chen, Joachim Wabnig, Christian Flindt
 **更新时间**: 2026-01-16 18:03
 **论文摘要**: A central building block of a heat engine is the working fluid, which mediates the conversion of heat into work. In nanoscale heat engines, the working fluid can be a quantum system whose behavior and dynamics are non-classical. A particularly versatile realization is a quantum resonator, which allows for precise control and coupling to thermal reservoirs, making it an ideal platform for exploring quantum thermodynamic processes. Here, we investigate the thermodynamic properties of a driven quan
-**核心总结**: 问题：纳米热机中量子工作流体的热力学特性；方法：研究驱动量子谐振器的热力学行为；结果：揭示其非经典动力学与热转换机制。
+**核心总结**: 问题：纳米热机中量子谐振器的热力学特性；方法：研究驱动量子谐振器的热力学行为；结果：揭示其在量子热力学中的潜在应用。
 
 ---
 ## 3. [Generative Scenario Rollouts for End-to-End Autonomous Driving](http://arxiv.org/abs/2601.11475v1)
@@ -108,7 +108,7 @@
 **作者**: Rajeev Yasarla, Deepti Hegde, Shizhong Han, Hsin-Pai Cheng, Yunxiao Shi, Meysam Sadeghigooghari, Shweta Mahajan, Apratim Bhattacharyya, Litian Liu, Risheek Garrepalli, Thomas Svantesson, Fatih Porikli
 **更新时间**: 2026-01-16 17:59
 **论文摘要**: Vision-Language-Action (VLA) models are emerging as highly effective planning models for end-to-end autonomous driving systems. However, current works mostly rely on imitation learning from sparse trajectory annotations and under-utilize their potential as generative models. We propose Generative Scenario Rollouts (GeRo), a plug-and-play framework for VLA models that jointly performs planning and generation of language-grounded future traffic scenes through an autoregressive rollout strategy. Fi
-**核心总结**: 问题：现有VLA模型依赖稀疏轨迹标注，未能充分发挥生成能力；方法：提出GeRo框架，通过自回归滚动策略联合规划与生成语言引导的未来交通场景；结果：无。
+**核心总结**: 问题：现有VLA模型依赖稀疏轨迹标注，未充分发挥生成能力；方法：提出GeRo框架，通过自回归滚动策略联合规划与生成语言引导的未来交通场景；结果：无。
 
 ---
 ## 4. [A Probabilistic Approach to Trajectory-Based Optimal Experimental Design](http://arxiv.org/abs/2601.11473v1)
@@ -116,7 +116,7 @@
 **作者**: Ahmed Attia
 **更新时间**: 2026-01-16 17:58
 **论文摘要**: We present a novel probabilistic approach for optimal path experimental design. In this approach a discrete path optimization problem is defined on a static navigation mesh, and trajectories are modeled as random variables governed by a parametric Markov policy. The discrete path optimization problem is then replaced with an equivalent stochastic optimization problem over the policy parameters, resulting in an optimal probability model that samples estimates of the optimal discrete path. This ap
-**核心总结**: 问题：路径优化实验设计；方法：基于马尔可夫策略的随机优化；结果：生成最优概率模型以采样路径。
+**核心总结**: 问题：路径优化实验设计；方法：基于马尔可夫策略的随机优化；结果：生成最优概率模型以采样最优路径。
 
 ---
 ## 5. [Five Years of Mini-EUSO Observations from the ISS: Summary of Key Results](http://arxiv.org/abs/2601.11458v1)
@@ -124,7 +124,7 @@
 **作者**: Matteo Battisti
 **更新时间**: 2026-01-16 17:32
 **论文摘要**: Mini-EUSO is the first space-borne detector of the JEM-EUSO (Joint Exploratory Missions for Extreme Universe Space Observatory) program, operating on the International Space Station (ISS) since October 2019. Designed to search for Ultra-High Energy Cosmic Rays (UHECRs) above 10$^{21}~$eV and capable of placing a stringent upper limit on their flux at these extreme energies, paving the way to future space-based UHECR observatories, Mini-EUSO has completed more than 150 observation sessions over f
-**核心总结**: 问题：探测超高能宇宙射线；方法：使用Mini-EUSO空间探测器进行观测；结果：完成150余次观测，为未来空间望远镜奠定基础。
+**核心总结**: 问题：探测10$^{21}$ eV以上的超高能宇宙射线；方法：利用Mini-EUSO空间探测器进行观测；结果：完成超过150次观测，为未来空间观测奠定基础。
 
 ---
 ## 6. [Implications of Grid-Forming Inverter Parameters on Disturbance Localization and Controllability](http://arxiv.org/abs/2601.11453v1)
@@ -132,7 +132,7 @@
 **作者**: Matt Baughman, Marena Trujillo, Bri-Mathias Hodge, Emily Jensen
 **更新时间**: 2026-01-16 17:18
 **论文摘要**: The shift from traditional synchronous generator (SG) based power generation to generation driven by power electronic devices introduces new dynamic phenomena and considerations for the control of large-scale power systems. In this paper, two aspects of all-inverter power systems are investigated: greater localization of system disturbance response and greater system controllability. The prevalence of both of these aspects are shown to be related to the lower effective inertia of inverters and h
-**核心总结**: 问题：传统同步发电机被电力电子设备取代带来的动态变化；方法：研究全逆变器系统中的扰动响应局部化和系统可控制性；结果：两者均与逆变器有效惯性降低有关。
+**核心总结**: 问题：传统同步发电机向电力电子设备驱动发电的转变带来新的动态现象和控制挑战；方法：研究全逆变器电力系统的局部扰动响应和系统可控性；结果：两者均与逆变器有效惯性降低有关。
 
 ---
 ## 7. [IMS: Intelligent Hardware Monitoring System for Secure SoCs](http://arxiv.org/abs/2601.11447v1)
@@ -140,7 +140,7 @@
 **作者**: Wadid Foudhaili, Aykut Rencber, Anouar Nechi, Rainer Buchty, Mladen Berekovic, Andres Gomez, Saleh Mulhem
 **更新时间**: 2026-01-16 17:10
 **论文摘要**: In the modern Systems-on-Chip (SoC), the Advanced eXtensible Interface (AXI) protocol exhibits security vulnerabilities, enabling partial or complete denial-of-service (DoS) through protocol-violation attacks. The recent countermeasures lack a dedicated real-time protocol semantic analysis and evade protocol compliance checks. This paper tackles this AXI vulnerability issue and presents an intelligent hardware monitoring system (IMS) for real-time detection of AXI protocol violations. IMS is a h
-**核心总结**: 问题：AXI协议存在安全漏洞，易受协议违规攻击导致DoS；方法：提出智能硬件监控系统（IMS）进行实时协议语义分析；结果：可检测AXI协议违规行为，提升SoC安全性。
+**核心总结**: 问题：AXI协议存在安全漏洞，易受协议违规攻击导致DoS；方法：提出智能硬件监控系统（IMS）实时检测协议违规；结果：IMS可有效识别并阻止协议违规行为。
 
 ---
 ## 8. [Channel Estimation in MIMO Systems Aided by Microwave Linear Analog Computers (MiLACs)](http://arxiv.org/abs/2601.11438v1)
@@ -148,7 +148,7 @@
 **作者**: Qiaosen Zhang, Matteo Nerini, Bruno Clerckx
 **更新时间**: 2026-01-16 16:59
 **论文摘要**: Microwave linear analog computers (MiLACs) have recently emerged as a promising solution for future gigantic multiple-input multiple-output (MIMO) systems, enabling beamforming with greatly reduced hardware and computational cost. However, channel estimation for MiLAC-aided systems remains an open problem. Conventional least squares (LS) and minimum mean square error (MMSE) estimation rely on intensive digital computation, which undermines the benefits offered by MiLACs. In this letter, we propo
-**核心总结**: 问题：MiLAC系统中通道估计问题未解决；方法：提出无需密集数字计算的估计方法；结果：提升MiLAC在MIMO系统中的效率与适用性。
+**核心总结**: 问题：MiLAC系统中通道估计存在挑战；方法：提出适用于MiLAC的低复杂度通道估计方法；结果：有效降低计算成本并提升估计精度。
 
 ---
 ## 9. [A Practical Guide to Establishing Technical Debt Management](http://arxiv.org/abs/2601.11430v1)
@@ -156,7 +156,7 @@
 **作者**: Marion Wiese
 **更新时间**: 2026-01-16 16:52
 **论文摘要**: This white paper provides an overview of the topic of "technical debt" and presents an approach for managing technical debt in teams. The white paper is based on the results of my dissertation, which aimed to translate scientific findings into practical guidance. To this end, I collaborated with other researchers to support three teams from different companies in adapting and establishing a technical debt management system tailored to their specific needs. Research findings were supplemented wit
-**核心总结**: 问题：如何在团队中管理技术债务；方法：基于博士研究，与团队合作建立定制化技术债务管理系统；结果：支持三家公司建立适应其需求的技术债务管理方案。
+**核心总结**: 问题：如何在团队中有效管理技术债务；方法：基于博士研究，与团队合作建立定制化的技术债务管理系统；结果：支持三家公司实施适合自身需求的技术债务管理方案。
 
 ---
 ## 10. [Forcing and Diagnosing Failure Modes of Fourier Neural Operators Across Diverse PDE Families](http://arxiv.org/abs/2601.11428v1)
@@ -164,6 +164,6 @@
 **作者**: Lennon Shikhman
 **更新时间**: 2026-01-16 16:47
 **论文摘要**: Fourier Neural Operators (FNOs) have shown strong performance in learning solution maps of partial differential equations (PDEs), but their robustness under distribution shifts, long-horizon rollouts, and structural perturbations remains poorly understood. We present a systematic stress-testing framework that probes failure modes of FNOs across five qualitatively different PDE families: dispersive, elliptic, multi-scale fluid, financial, and chaotic systems. Rather than optimizing in-distributio
-**核心总结**: 问题：FNO在分布偏移、长时序和结构扰动下的鲁棒性不明确；方法：提出系统压力测试框架，测试五类PDE的失效模式；结果：揭示FNO在不同PDE家族中的脆弱性。
+**核心总结**: 问题：FNO在分布偏移、长时 rollout 和结构扰动下的鲁棒性不足；方法：提出系统压力测试框架，测试五类PDE家族的故障模式；结果：揭示FNO在不同PDE任务中的脆弱性。
 
 ---
